
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int32_t ;
typedef int u_int16_t ;
typedef int u_char ;



u_int16_t chksum(u_char *data, unsigned long count) {

    u_int32_t sum = 0;

    u_int16_t *wrd;


    wrd=(u_int16_t *)data;

    while( count > 1 ) {

        sum = sum + *wrd;

        wrd++;

        count -= 2;

    }


    if( count > 0 ) { sum = sum + ((*wrd &0xFF)<<8); }


    while (sum>>16) {

        sum = (sum & 0xffff) + (sum >> 16);

    }


    return (~sum);

}
