; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_21655.c_chksum.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_21655.c_chksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chksum(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  store i32 0, i32* %5, align 4
  %7 = load i32*, i32** %3, align 8
  store i32* %7, i32** %6, align 8
  br label %8

8:                                                ; preds = %11, %2
  %9 = load i64, i64* %4, align 8
  %10 = icmp ugt i64 %9, 1
  br i1 %10, label %11, label %20

11:                                               ; preds = %8
  %12 = load i32, i32* %5, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %12, %14
  store i32 %15, i32* %5, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = getelementptr inbounds i32, i32* %16, i32 1
  store i32* %17, i32** %6, align 8
  %18 = load i64, i64* %4, align 8
  %19 = sub i64 %18, 2
  store i64 %19, i64* %4, align 8
  br label %8

20:                                               ; preds = %8
  %21 = load i64, i64* %4, align 8
  %22 = icmp ugt i64 %21, 0
  br i1 %22, label %23, label %30

23:                                               ; preds = %20
  %24 = load i32, i32* %5, align 4
  %25 = load i32*, i32** %6, align 8
  %26 = load i32, i32* %25, align 4
  %27 = and i32 %26, 255
  %28 = shl i32 %27, 8
  %29 = add nsw i32 %24, %28
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %23, %20
  br label %31

31:                                               ; preds = %35, %30
  %32 = load i32, i32* %5, align 4
  %33 = ashr i32 %32, 16
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %31
  %36 = load i32, i32* %5, align 4
  %37 = and i32 %36, 65535
  %38 = load i32, i32* %5, align 4
  %39 = ashr i32 %38, 16
  %40 = add nsw i32 %37, %39
  store i32 %40, i32* %5, align 4
  br label %31

41:                                               ; preds = %31
  %42 = load i32, i32* %5, align 4
  %43 = xor i32 %42, -1
  ret i32 %43
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
